--- a/src/output.css
+++ b/src/output.css
@@ -560,44 +560,92 @@ video {
   margin: 0px;
 }
 
-.mb-1 {
-  margin-bottom: 0.25rem;
+.mx-0 {
+  margin-left: 0px;
+  margin-right: 0px;
 }
 
-.mb-\[20px\] {
-  margin-bottom: 20px;
+.my-auto {
+  margin-top: auto;
+  margin-bottom: auto;
 }
 
-.ml-2 {
-  margin-left: 0.5rem;
+.mx-auto {
+  margin-left: auto;
+  margin-right: auto;
+}
+
+.my-0 {
+  margin-top: 0px;
+  margin-bottom: 0px;
+}
+
+.mt-auto {
+  margin-top: auto;
 }
 
 .mr-10 {
   margin-right: 2.5rem;
 }
 
-.mt-2 {
-  margin-top: 0.5rem;
-}
-
-.mt-4 {
-  margin-top: 1rem;
-}
-
-.mt-5 {
-  margin-top: 1.25rem;
+.mt-10 {
+  margin-top: 2.5rem;
 }
 
 .mt-7 {
   margin-top: 1.75rem;
 }
 
-.mt-40 {
-  margin-top: 10rem;
+.mt-5 {
+  margin-top: 1.25rem;
+}
+
+.mr-2 {
+  margin-right: 0.5rem;
+}
+
+.ml-2 {
+  margin-left: 0.5rem;
+}
+
+.mt-3 {
+  margin-top: 0.75rem;
+}
+
+.mt-2 {
+  margin-top: 0.5rem;
+}
+
+.mb-1 {
+  margin-bottom: 0.25rem;
+}
+
+.mt-4 {
+  margin-top: 1rem;
+}
+
+.mb-10 {
+  margin-bottom: 2.5rem;
+}
+
+.mb-20 {
+  margin-bottom: 5rem;
 }
 
 .mt-20 {
   margin-top: 5rem;
+}
+
+.mb-\[10px\] {
+  margin-bottom: 10px;
+}
+
+.mb-\[20px\] {
+  margin-bottom: 20px;
+}
+
+.mt-40 {
+  margin-top: 10rem;
 }
 
 .mt-60 {
@@ -608,16 +656,8 @@ video {
   margin-top: 20rem;
 }
 
-.mt-10 {
-  margin-top: 2.5rem;
-}
-
 .mt-0 {
   margin-top: 0px;
-}
-
-.mt-3 {
-  margin-top: 0.75rem;
 }
 
 .mt-\[30px\] {
@@ -672,11 +712,11 @@ video {
   display: none;
 }
 
-.h-screen {
+.h-\[100vh\] {
   height: 100vh;
 }
 
-.h-\[100vh\] {
+.h-screen {
   height: 100vh;
 }
 
@@ -696,16 +736,85 @@ video {
   min-height: 140vh;
 }
 
-.w-4 {
-  width: 1rem;
+.w-1\/2 {
+  width: 50%;
+}
+
+.w-28 {
+  width: 7rem;
+}
+
+.w-1 {
+  width: 0.25rem;
+}
+
+.w-1\/3 {
+  width: 33.333333%;
+}
+
+.w-1\/4 {
+  width: 25%;
+}
+
+.w-max {
+  width: -moz-max-content;
+  width: max-content;
+}
+
+.w-\[200px\] {
+  width: 200px;
 }
 
 .w-\[250px\] {
   width: 250px;
 }
 
+.w-\[230px\] {
+  width: 230px;
+}
+
 .w-\[300px\] {
   width: 300px;
+}
+
+.w-\[260px\] {
+  width: 260px;
+}
+
+.w-\[270px\] {
+  width: 270px;
+}
+
+.w-\[280px\] {
+  width: 280px;
+}
+
+.w-\[265px\] {
+  width: 265px;
+}
+
+.w-20 {
+  width: 5rem;
+}
+
+.w-10 {
+  width: 2.5rem;
+}
+
+.w-2 {
+  width: 0.5rem;
+}
+
+.w-4 {
+  width: 1rem;
+}
+
+.w-5 {
+  width: 1.25rem;
+}
+
+.w-3 {
+  width: 0.75rem;
 }
 
 .w-\[30px\] {
@@ -736,16 +845,33 @@ video {
   width: 100%;
 }
 
-.w-\[280px\] {
-  width: 280px;
-}
-
-.w-\[270px\] {
-  width: 270px;
-}
-
 .min-w-\[300px\] {
   min-width: 300px;
+}
+
+.max-w-1 {
+  max-width: 0.25rem;
+}
+
+.max-w-1\.5 {
+  max-width: 0.375rem;
+}
+
+.max-w-screen-xl {
+  max-width: 1280px;
+}
+
+.max-w-3xl {
+  max-width: 48rem;
+}
+
+.max-w-max {
+  max-width: -moz-max-content;
+  max-width: max-content;
+}
+
+.max-w-screen-sm {
+  max-width: 640px;
 }
 
 .-translate-x-1\/2 {
@@ -782,6 +908,10 @@ video {
   flex-direction: column-reverse;
 }
 
+.content-center {
+  align-content: center;
+}
+
 .items-start {
   align-items: flex-start;
 }
@@ -806,20 +936,65 @@ video {
   border-style: solid;
 }
 
-.rounded {
-  border-radius: 0.25rem;
+.rounded-md {
+  border-radius: 0.375rem;
 }
 
 .rounded-3xl {
   border-radius: 1.5rem;
 }
 
-.rounded-md {
-  border-radius: 0.375rem;
+.rounded {
+  border-radius: 0.25rem;
+}
+
+.rounded-2xl {
+  border-radius: 1rem;
 }
 
 .border {
   border-width: 1px;
+}
+
+.border-\[5px\] {
+  border-width: 5px;
+}
+
+.border-\[2px\] {
+  border-width: 2px;
+}
+
+.border-\[1px\] {
+  border-width: 1px;
+}
+
+.border-2 {
+  border-width: 2px;
+}
+
+.border-gray-500 {
+  --tw-border-opacity: 1;
+  border-color: rgb(107 114 128 / var(--tw-border-opacity));
+}
+
+.border-gray-700 {
+  --tw-border-opacity: 1;
+  border-color: rgb(55 65 81 / var(--tw-border-opacity));
+}
+
+.border-gray-900 {
+  --tw-border-opacity: 1;
+  border-color: rgb(17 24 39 / var(--tw-border-opacity));
+}
+
+.border-gray-400 {
+  --tw-border-opacity: 1;
+  border-color: rgb(156 163 175 / var(--tw-border-opacity));
+}
+
+.border-gray-200 {
+  --tw-border-opacity: 1;
+  border-color: rgb(229 231 235 / var(--tw-border-opacity));
 }
 
 .border-gray-300 {
@@ -832,9 +1007,49 @@ video {
   border-color: rgb(239 68 68 / var(--tw-border-opacity));
 }
 
-.bg-\[\#363842\] {
+.bg-red-700 {
   --tw-bg-opacity: 1;
-  background-color: rgb(54 56 66 / var(--tw-bg-opacity));
+  background-color: rgb(185 28 28 / var(--tw-bg-opacity));
+}
+
+.bg-gray-800 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(31 41 55 / var(--tw-bg-opacity));
+}
+
+.bg-gray-700 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(55 65 81 / var(--tw-bg-opacity));
+}
+
+.bg-gray-600 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(75 85 99 / var(--tw-bg-opacity));
+}
+
+.bg-gray-900 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(17 24 39 / var(--tw-bg-opacity));
+}
+
+.bg-yellow-400 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(250 204 21 / var(--tw-bg-opacity));
+}
+
+.bg-\[\#232323\] {
+  --tw-bg-opacity: 1;
+  background-color: rgb(35 35 35 / var(--tw-bg-opacity));
+}
+
+.bg-\[\#505090\] {
+  --tw-bg-opacity: 1;
+  background-color: rgb(80 80 144 / var(--tw-bg-opacity));
+}
+
+.bg-\[\#242742\] {
+  --tw-bg-opacity: 1;
+  background-color: rgb(36 39 66 / var(--tw-bg-opacity));
 }
 
 .bg-\[\#36384e\] {
@@ -842,19 +1057,43 @@ video {
   background-color: rgb(54 56 78 / var(--tw-bg-opacity));
 }
 
+.bg-\[\#ffffff\] {
+  --tw-bg-opacity: 1;
+  background-color: rgb(255 255 255 / var(--tw-bg-opacity));
+}
+
 .bg-white {
   --tw-bg-opacity: 1;
   background-color: rgb(255 255 255 / var(--tw-bg-opacity));
 }
 
-.bg-\[\#3342e4\] {
+.bg-\[\#2229d\] {
+  background-color: #2229d;
+}
+
+.bg-\[\#242891\] {
   --tw-bg-opacity: 1;
-  background-color: rgb(51 66 228 / var(--tw-bg-opacity));
+  background-color: rgb(36 40 145 / var(--tw-bg-opacity));
 }
 
 .bg-\[\#242841\] {
   --tw-bg-opacity: 1;
   background-color: rgb(36 40 65 / var(--tw-bg-opacity));
+}
+
+.bg-\[\#363842\] {
+  --tw-bg-opacity: 1;
+  background-color: rgb(54 56 66 / var(--tw-bg-opacity));
+}
+
+.bg-\[\#3a47cd\] {
+  --tw-bg-opacity: 1;
+  background-color: rgb(58 71 205 / var(--tw-bg-opacity));
+}
+
+.bg-\[\#3342e4\] {
+  --tw-bg-opacity: 1;
+  background-color: rgb(51 66 228 / var(--tw-bg-opacity));
 }
 
 .bg-red-50 {
@@ -876,22 +1115,56 @@ video {
   --tw-bg-opacity: 0.75;
 }
 
+.bg-gradient-to-r {
+  background-image: linear-gradient(to right, var(--tw-gradient-stops));
+}
+
+.from-neutral-700 {
+  --tw-gradient-from: #404040 var(--tw-gradient-from-position);
+  --tw-gradient-to: rgb(64 64 64 / 0) var(--tw-gradient-to-position);
+  --tw-gradient-stops: var(--tw-gradient-from), var(--tw-gradient-to);
+}
+
+.from-cyan-500 {
+  --tw-gradient-from: #06b6d4 var(--tw-gradient-from-position);
+  --tw-gradient-to: rgb(6 182 212 / 0) var(--tw-gradient-to-position);
+  --tw-gradient-stops: var(--tw-gradient-from), var(--tw-gradient-to);
+}
+
+.from-\[\#ff6257\] {
+  --tw-gradient-from: #ff6257 var(--tw-gradient-from-position);
+  --tw-gradient-to: rgb(255 98 87 / 0) var(--tw-gradient-to-position);
+  --tw-gradient-stops: var(--tw-gradient-from), var(--tw-gradient-to);
+}
+
 .from-\[\#fd5679\] {
   --tw-gradient-from: #fd5679 var(--tw-gradient-from-position);
   --tw-gradient-to: rgb(253 86 121 / 0) var(--tw-gradient-to-position);
   --tw-gradient-stops: var(--tw-gradient-from), var(--tw-gradient-to);
 }
 
+.to-blue-500 {
+  --tw-gradient-to: #3b82f6 var(--tw-gradient-to-position);
+}
+
+.to-\[\#e85343\] {
+  --tw-gradient-to: #e85343 var(--tw-gradient-to-position);
+}
+
+.to-\[\#fff\] {
+  --tw-gradient-to: #fff var(--tw-gradient-to-position);
+}
+
 .to-\[\#fd6846\] {
   --tw-gradient-to: #fd6846 var(--tw-gradient-to-position);
 }
 
-.p-10 {
-  padding: 2.5rem;
-}
-
 .p-8 {
   padding: 2rem;
+}
+
+.p-10 {
+  padding: 2.5rem;
 }
 
 .p-4 {
@@ -902,9 +1175,19 @@ video {
   padding: 3rem;
 }
 
+.px-2 {
+  padding-left: 0.5rem;
+  padding-right: 0.5rem;
+}
+
 .px-4 {
   padding-left: 1rem;
   padding-right: 1rem;
+}
+
+.py-7 {
+  padding-top: 1.75rem;
+  padding-bottom: 1.75rem;
 }
 
 .py-2 {
@@ -935,11 +1218,6 @@ video {
 .px-8 {
   padding-left: 2rem;
   padding-right: 2rem;
-}
-
-.px-2 {
-  padding-left: 0.5rem;
-  padding-right: 0.5rem;
 }
 
 .px-3 {
@@ -1028,17 +1306,49 @@ video {
   vertical-align: middle;
 }
 
+.text-lg {
+  font-size: 1.125rem;
+  line-height: 1.75rem;
+}
+
+.text-3xl {
+  font-size: 1.875rem;
+  line-height: 2.25rem;
+}
+
+.text-5xl {
+  font-size: 3rem;
+  line-height: 1;
+}
+
 .text-4xl {
   font-size: 2.25rem;
   line-height: 2.5rem;
+}
+
+.text-sm {
+  font-size: 0.875rem;
+  line-height: 1.25rem;
+}
+
+.text-\[14px\] {
+  font-size: 14px;
+}
+
+.text-\[12px\] {
+  font-size: 12px;
+}
+
+.text-\[11px\] {
+  font-size: 11px;
 }
 
 .text-\[10px\] {
   font-size: 10px;
 }
 
-.text-\[11px\] {
-  font-size: 11px;
+.text-\[9px\] {
+  font-size: 9px;
 }
 
 .text-\[8px\] {
@@ -1069,17 +1379,20 @@ video {
   font-size: 13px;
 }
 
-.text-\[12px\] {
-  font-size: 12px;
-}
-
-.text-3xl {
-  font-size: 1.875rem;
-  line-height: 2.25rem;
-}
-
 .font-bold {
   font-weight: 700;
+}
+
+.font-\[700px\] {
+  font-weight: 700px;
+}
+
+.font-extrabold {
+  font-weight: 800;
+}
+
+.font-medium {
+  font-weight: 500;
 }
 
 .font-semibold {
@@ -1102,14 +1415,14 @@ video {
   line-height: 2.5rem;
 }
 
-.text-\[\#242742\] {
+.text-yellow-50 {
   --tw-text-opacity: 1;
-  color: rgb(36 39 66 / var(--tw-text-opacity));
+  color: rgb(254 252 232 / var(--tw-text-opacity));
 }
 
-.text-\[\#242841\] {
+.text-yellow-500 {
   --tw-text-opacity: 1;
-  color: rgb(36 40 65 / var(--tw-text-opacity));
+  color: rgb(234 179 8 / var(--tw-text-opacity));
 }
 
 .text-\[\#36384e\] {
@@ -1117,9 +1430,39 @@ video {
   color: rgb(54 56 78 / var(--tw-text-opacity));
 }
 
-.text-\[\#faa09d\] {
+.text-\[\#242742\] {
   --tw-text-opacity: 1;
-  color: rgb(250 160 157 / var(--tw-text-opacity));
+  color: rgb(36 39 66 / var(--tw-text-opacity));
+}
+
+.text-\[\#fff\] {
+  --tw-text-opacity: 1;
+  color: rgb(255 255 255 / var(--tw-text-opacity));
+}
+
+.text-\[\#0a0a0d\] {
+  --tw-text-opacity: 1;
+  color: rgb(10 10 13 / var(--tw-text-opacity));
+}
+
+.text-\[\#040409\] {
+  --tw-text-opacity: 1;
+  color: rgb(4 4 9 / var(--tw-text-opacity));
+}
+
+.text-\[\#0c0c21\] {
+  --tw-text-opacity: 1;
+  color: rgb(12 12 33 / var(--tw-text-opacity));
+}
+
+.text-\[\#22263d\] {
+  --tw-text-opacity: 1;
+  color: rgb(34 38 61 / var(--tw-text-opacity));
+}
+
+.text-yellow-400 {
+  --tw-text-opacity: 1;
+  color: rgb(250 204 21 / var(--tw-text-opacity));
 }
 
 .text-gray-900 {
@@ -1130,6 +1473,16 @@ video {
 .text-white {
   --tw-text-opacity: 1;
   color: rgb(255 255 255 / var(--tw-text-opacity));
+}
+
+.text-\[\#faa09d\] {
+  --tw-text-opacity: 1;
+  color: rgb(250 160 157 / var(--tw-text-opacity));
+}
+
+.text-\[\#242841\] {
+  --tw-text-opacity: 1;
+  color: rgb(36 40 65 / var(--tw-text-opacity));
 }
 
 .text-\[\#4e62e4\] {
@@ -1187,8 +1540,22 @@ video {
   outline-offset: 2px;
 }
 
+.transition {
+  transition-property: color, background-color, border-color, text-decoration-color, fill, stroke, opacity, box-shadow, transform, filter, -webkit-backdrop-filter;
+  transition-property: color, background-color, border-color, text-decoration-color, fill, stroke, opacity, box-shadow, transform, filter, backdrop-filter;
+  transition-property: color, background-color, border-color, text-decoration-color, fill, stroke, opacity, box-shadow, transform, filter, backdrop-filter, -webkit-backdrop-filter;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+  transition-duration: 150ms;
+}
+
 .transition-all {
   transition-property: all;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+  transition-duration: 150ms;
+}
+
+.transition-colors {
+  transition-property: color, background-color, border-color, text-decoration-color, fill, stroke;
   transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
   transition-duration: 150ms;
 }
@@ -1197,8 +1564,22 @@ video {
   transition-delay: 150ms;
 }
 
+.delay-75 {
+  transition-delay: 75ms;
+}
+
 .ease-in-out {
   transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.hover\:bg-\[\#ff2657\]:hover {
+  --tw-bg-opacity: 1;
+  background-color: rgb(255 38 87 / var(--tw-bg-opacity));
+}
+
+.hover\:bg-\[\#ff6257\]:hover {
+  --tw-bg-opacity: 1;
+  background-color: rgb(255 98 87 / var(--tw-bg-opacity));
 }
 
 .hover\:bg-gradient-to-r:hover {
@@ -1225,6 +1606,12 @@ video {
 .focus\:ring-red-500:focus {
   --tw-ring-opacity: 1;
   --tw-ring-color: rgb(239 68 68 / var(--tw-ring-opacity));
+}
+
+@media (min-width: 640px) {
+  .sm\:flex-col-reverse {
+    flex-direction: column-reverse;
+  }
 }
 
 @media (min-width: 768px) {
@@ -1291,6 +1678,10 @@ video {
 
   .md\:flex-row {
     flex-direction: row;
+  }
+
+  .md\:flex-col-reverse {
+    flex-direction: column-reverse;
   }
 
   .md\:rounded-3xl {
